Implements Maven resolution using JGraphT dependency graph