@@ -19,13 +19,13 @@
 package eu.fasten.core.maven;
 
 import eu.fasten.core.maven.data.Dependency;
-import org.apache.commons.lang3.tuple.ImmutablePair;
-import org.apache.commons.lang3.tuple.Pair;
+import eu.fasten.core.maven.data.graph.DependencyEdge;
+import eu.fasten.core.maven.data.graph.DependencyNode;
+import org.jgrapht.graph.DefaultDirectedGraph;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import java.sql.Timestamp;
-import java.util.HashMap;
-import java.util.List;
+import java.util.Collections;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class GraphMavenResolverTest {
@@ -39,18 +39,25 @@ public class GraphMavenResolverTest {
 
     @Test
     public void filterDependencyGraphByTimestampTest() {
-        var expected = new HashMap<Dependency, List<Pair<Dependency, Timestamp>>>();
-        expected.put(new Dependency("a:a:1"), List.of(
-                new ImmutablePair<>(new Dependency("b:b:1"), new Timestamp(1))
-        ));
-        var graph = new HashMap<Dependency, List<Pair<Dependency, Timestamp>>>();
-        graph.put(new Dependency("a:a:1"), List.of(
-                new ImmutablePair<>(new Dependency("b:b:1"), new Timestamp(1)),
-                new ImmutablePair<>(new Dependency("b:b:2"), new Timestamp(2))
-        ));
-        graph.put(new Dependency("b:b:2"), List.of(
-                new ImmutablePair<>(new Dependency("c:c:3"), new Timestamp(3))
-        ));
+        var expected = new DefaultDirectedGraph<DependencyNode, DependencyEdge>(DependencyEdge.class);
+        var nodeA = new DependencyNode(new Dependency("a:a:1"), new Timestamp(-1));
+        var nodeB = new DependencyNode(new Dependency("b:b:2"), new Timestamp(1));
+        var edgeAB = new DependencyEdge("", false, Collections.emptyList());
+        expected.addVertex(nodeA);
+        expected.addVertex(nodeB);
+        expected.addEdge(nodeA, nodeB, edgeAB);
+        var graph = new DefaultDirectedGraph<DependencyNode, DependencyEdge>(DependencyEdge.class);
+        var nodeB2 = new DependencyNode(new Dependency("b:b:2"), new Timestamp(2));
+        var nodeC = new DependencyNode(new Dependency("c:c:3"), new Timestamp(3));
+        var edgeAB2 = new DependencyEdge("", false, Collections.emptyList());
+        var edgeB2C = new DependencyEdge("", false, Collections.emptyList());
+        graph.addVertex(nodeA);
+        graph.addVertex(nodeB);
+        graph.addEdge(nodeA, nodeB, edgeAB);
+        graph.addVertex(nodeB2);
+        graph.addEdge(nodeA, nodeB2, edgeAB2);
+        graph.addVertex(nodeC);
+        graph.addEdge(nodeB2, nodeC, edgeB2C);
         var actual = graphMavenResolver.filterDependencyGraphByTimestamp(graph, new Timestamp(1));
         assertEquals(expected, actual);
     }
